--- a/deployment-prod/certificate.yaml
+++ b/deployment-prod/certificate.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: x-translatethread-com
+  name: translatethread-com
   namespace: tools
 spec:
-  secretName: x-translatethread-com
+  secretName: translatethread-com
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
   dnsNames:
-    - x.translatethread.com
+    - translatethread.com
