--- a/deployment-prod/ingress.yaml
+++ b/deployment-prod/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-    - host: x.translatethread.com
+    - host: translatethread.com
       http:
         paths:
           - pathType: Prefix
@@ -18,5 +18,5 @@ spec:
               servicePort: 80
   tls:
     - hosts:
-        - x.translatethread.com
-      secretName: x-translatethread-com
+        - translatethread.com
+      secretName: translatethread-com
